--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ gunicorn==20.1.0
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
+psycopg2-binary==2.9.3
 dominate==2.5.2
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
